[tool.poetry]
authors = ["Daniel Schmidt <danischm@cisco.com>"]
description = "A CLI tool to render and execute Robot Framework tests using Jinja templating."
documentation = "https://github.com/netascode/iac-test"
homepage = "https://github.com/netascode/iac-test"
license = "LICENSE"
maintainers = ["Daniel Schmidt <danischm@cisco.com>"]
name = "iac-test"
readme = "README.md"
repository = "https://github.com/netascode/iac-test"
version = "0.2.6"

[tool.poetry.scripts]
iac-test = "iac_test.cli.main:main"

[tool.poetry.dependencies]
Jinja2 = "^3.0.3"
RESTinstance = "^1.3.0"
click = "^8.0.4"
errorhandler = "^2.0.1"
importlib-metadata = "^2.0.0"
jmespath = "^1.0.1"
python = "^3.8"
robotframework = "^6.0.1"
robotframework-jsonlibrary = "^0.5"
robotframework-pabot = "^2.8.0"
robotframework-requests = "^0.9.4"
ruamel-yaml = ">0.16.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pre-commit = "^3.5"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.5.6"

[tool.coverage.run]
source = ["iac_test"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract", "except ImportError:"]
omit = ["*/__main__.py"]

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
python_version = 3.8
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.pytest.ini_options]
markers = ["unit", "integration"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
